--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,8 +1,10 @@
 # db config
 spring:
+  mvc:
+   static-path-pattern: /static/**
   datasource:
    driver-class-name: org.mariadb.jdbc.Driver
-   url: jdbc:mariadb://localhost:3306/board
+   url: jdbc:mariadb://localhost:3306/board33
    username: root
    password: green502
 
@@ -11,3 +13,9 @@ spring:
 mybatis:
  type-aliases-package: com.green.board8
  mapper-locations : mapper/**/*.xml
+
+
+#swagger
+springdoc:
+ swagger-ui:
+  path: /swagger.html
