--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,10 +1,14 @@
 # db config
 spring:
+  servlet:
+   multipart:
+    max-file-size: 3MB
+    max-request-size: 12MB
   mvc:
    static-path-pattern: /static/**
   datasource:
    driver-class-name: org.mariadb.jdbc.Driver
-   url: jdbc:mariadb://localhost:3306/board33
+   url: jdbc:mariadb://localhost:3306/board
    username: root
    password: green502
 
@@ -19,3 +23,7 @@ mybatis:
 springdoc:
  swagger-ui:
   path: /swagger.html
+
+
+file:
+ dir: D:\download\
