--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -8,9 +8,9 @@ spring:
    static-path-pattern: /static/**
   datasource:
    driver-class-name: org.mariadb.jdbc.Driver
-   url: jdbc:mariadb://localhost:3306/board
+   url: jdbc:mariadb://localhost:3306/demo
    username: root
-   password: green502
+   password: 123
 
 
 #mybatis config
@@ -26,4 +26,4 @@ springdoc:
 
 
 file:
- dir: D:\download\
+ dir: C:\download\
